force-app/main/default/objects/Scheme_Section__c/Scheme_Section__c.object-meta.xml
<CustomObject>
    <label>Scheme Section</label>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>Scheme Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>