force-app/main/default/objects/Scheme_Section__c/fields/Data_Filled_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Data_Filled_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Filled Successfully</label>
    <type>Checkbox</type>
</CustomField>