force-app/main/default/objects/Scheme_Section__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Scheme Sections</relationshipLabel>
    <relationshipName>Scheme_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>