force-app/main/default/objects/Scheme_Section__c/fields/Reopen_Status__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Status__c</fullName>
    <label>Reopen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>