force-app/main/default/objects/Scheme_Section__c/fields/Reviewer_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer Mapping</label>
    <referenceTo>Reviewer_Mapping__c</referenceTo>
    <relationshipLabel>Scheme Sections</relationshipLabel>
    <relationshipName>Scheme_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>