force-app/main/default/objects/Scheme_Section__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>