force-app/main/default/objects/Scheme_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section_Name__c</columns>
    <columns>Reviewer_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reviewer_Mapping__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>